# edge-camera-pipeline

./: .gitignore  Cargo.toml  README.md  config.example.toml
config/: pi4-c922.example.toml
deployment/scripts/: deploy.sh  install_pi_service.sh
deployment/systemd/: pi-camera-host.service  pi4-c922.service
hosts/pi-camera-host/: Cargo.toml
hosts/pi-camera-host/src/: camera.rs  config.rs  main.rs  metadata.rs  mqtt.rs  state.rs
hosts/pi4-c922/: Cargo.toml  config.example.toml
hosts/pi4-c922/src/: main.rs
wasm-modules/camera-processor/: Cargo.toml
wasm-modules/camera-processor/src/: lib.rs  main.rs
