[package]
name = "pi4-c922-host"
version = "0.1.0"
edition = "2021"

[dependencies]
rumqttc = { version = "0.24", features = ["url"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["full"] }
anyhow = "1.0"
toml = "0.8"